# biotech-agent-ai

./: .gitignore  README.md  biotech_agent_guide.ipynb  test_genai_client.py  verify_connection.py
LifeScience-agents/: .gitignore  README.md
LifeScience-agents/clinical-research-synthesizer/: README.md  pyproject.toml
LifeScience-agents/clinical-research-synthesizer/clinical_research_synthesizer/: agent.py  prompt.py
LifeScience-agents/clinical-research-synthesizer/clinical_research_synthesizer/specialists/clinical_trial_specialist/: agent.py  prompt.py
LifeScience-agents/clinical-research-synthesizer/clinical_research_synthesizer/specialists/clinical_trial_specialist/tools/: extract_preconditions.py.bk  get_eligibility_criteria.py  scrape_trial_criteria.py  search_clinical_trials.py
LifeScience-agents/clinical-research-synthesizer/clinical_research_synthesizer/specialists/literature_researcher/: agent.py  prompt.py
LifeScience-agents/clinical-research-synthesizer/clinical_research_synthesizer/specialists/literature_researcher/tools/: extract_text_from_pdf.py  fetch_and_extract_full_text.py.backup  fetch_articles.py  summarize_paper_with_medgemma.py
LifeScience-agents/clinical-research-synthesizer/clinical_research_synthesizer/specialists/search_specialist/: agent.py
LifeScience-agents/clinical-research-synthesizer/clinical_research_synthesizer/specialists/search_specialist/tools/: pmc_search.py
LifeScience-agents/clinical-research-synthesizer/deployment/: deploy.py
LifeScience-agents/drug-discovery_agent/: README.md  pyproject.toml
LifeScience-agents/drug-discovery_agent/deployment/: deploy.py
LifeScience-agents/drug-discovery_agent/drug_discovery_agent/: agent.py  prompt.py
LifeScience-agents/drug-discovery_agent/drug_discovery_agent/specialists/compound_analyzer/: agent.py  prompt.py
LifeScience-agents/drug-discovery_agent/drug_discovery_agent/specialists/compound_analyzer/tools/: get_smiles.py  identify_compound.py  predict_toxicity.py
LifeScience-agents/drug-discovery_agent/drug_discovery_agent/specialists/literature_researcher/: agent.py  prompt.py
LifeScience-agents/drug-discovery_agent/drug_discovery_agent/specialists/literature_researcher/tools/: fetch_articles.py  therapeutics_chat.py
LifeScience-agents/medical-research/: .env.example  README.md  pyproject.toml  requirements.txt
LifeScience-agents/medical-research/deployment/: deploy.py  test_deployment.py
LifeScience-agents/medical-research/front-end-ui/: Dockerfile  package.json 
LifeScience-agents/medical-research/front-end-ui/public/: index.html
LifeScience-agents/medical-research/medical_research/: __init__.py  agent.py  prompt.py
LifeScience-agents/medical-research/medical_research/sub_agents/: __init__.py
LifeScience-agents/medical-research/medical_research/sub_agents/medical_analyst/: __init__.py  agent.py  prompt.py  tools.py
LifeScience-agents/medical-research/medical_research/sub_agents/medical_search/: __init__.py  agent.py  prompt.py  tools.py
LifeScience-agents/medical-research/medical_research/tests/: test_agent.py
MCP_servers/: keys
MCP_servers/GeneOntology-MCP-Server/: DEPLOYMENT_WALKTHROUGH.md  Dockerfile  README.md  package.json
MCP_servers/OpenFDA-MCP-Server/: Dockerfile  README.md
MCP_servers/OpenFDA-MCP-Server/src/: fda-server.ts  index.ts
MCP_servers/opengenes-mcp/: .env.template  DEPLOYMENT_WALKTHROUGH.md  Dockerfile  README.md  cleanup_git_history.sh  mcp-config-server.json  mcp-config-stdio.json  meta.yaml  pyproject.toml  verify_sse.sh
MCP_servers/opengenes-mcp/.github/workflows/: ci.yml
MCP_servers/opengenes-mcp/src/opengenes_mcp/: __init__.py  server.py
MCP_servers/opengenes-mcp/test/: test_mcp.py  test_qa.json
MCP_servers/opentargets-mcp/: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  run.sh
MCP_servers/opentargets-mcp/.github/workflows/: release.yml
MCP_servers/opentargets-mcp/examples/: genetic_target_prioritization.py
MCP_servers/opentargets-mcp/src/opentargets_mcp/: __init__.py  queries.py  server.py  utils.py
MCP_servers/opentargets-mcp/src/opentargets_mcp/tools/: __init__.py  disease.py  meta.py  search.py  study.py
MCP_servers/opentargets-mcp/tests/: test_disease_tools.py  test_meta_tools.py  test_target_tools.py
adk-python/: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pylintrc  pyproject.toml
adk-python/.github/ISSUE_TEMPLATE/: bug_report.md
adk-python/.github/workflows/: analyze-releases-for-adk-docs-updates.yml  check-file-contents.yml  copybara-pr-handler.yml  discussion_answering.yml  isort.yml  pr-triage.yml  pyink.yml  upload-adk-docs-to-vertex-ai-search.yml
adk-python/contributing/samples/: dummy_services.py  services.py  services.yaml
adk-python/tests/integration/: test_evaluate_agent_in_fixture.py  test_tools.py
adk-python/tests/unittests/: test_runners.py  testing_utils.py
biotech_agent/: .gcloudignore  agent.py  debug_adk.py  requirements.txt  utils.py
biotech_agent/tests/: test_biotech_agent_query.py
mcp_servers/GeneOntology-MCP-Server/: package-lock.json  verify_client.ts  verify_deployment.py
mcp_servers/OpenFDA-MCP-Server/: DEPLOYMENT_WALKTHROUGH.md  package-lock.json  package.json  test-client.ts
mcp_servers/opengenes-mcp/: pytest.ini  query_opengenes.py  test_deployment.py  worm_lifespan_genes.md
mcp_servers/opentargets-mcp/: .dockerignore  DEPLOYMENT_WALKTHROUGH.md  server.json
(+195 files in other folders)
