[tool.poetry]
name = "medical_research"
version = "0.1"
description = "AI-driven agent for medical research queries."
authors = ["Ryan Ye Min Thein - ryanymt@google.com" ]
license = "Apache License 2.0"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
google-adk = "^1.8.0"
google-genai = "^1.21.1"
pydantic = "^2.10.6"
python-dotenv = "^1.0.1"
google-cloud-aiplatform = { version = "^1.105.0", extras = [
    "agent-engines",
] }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"

[tool.poetry.group.deployment]
optional = true

[tool.poetry.group.deployment.dependencies]
absl-py = "^2.1.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
# We don't need a pythonpath with this flat structure

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"