[project]
name = "opentargets-mcp"
version = "0.3.0"
description = "MCP server for Open Targets Platform biomedical data access"
authors = [{name = "Nick Ren"}]
license = {text = "MIT"}
readme = "README.md"
keywords = ["mcp", "open-targets", "biomedical", "drug-discovery", "genetics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0.0",
    "aiohttp",
    "python-dotenv",
]

[project.scripts]
opentargets-mcp = "opentargets_mcp.server:main"

[project.urls]
Homepage = "https://github.com/nickzren/opentargets-mcp"
Repository = "https://github.com/nickzren/opentargets-mcp"
Documentation = "https://github.com/nickzren/opentargets-mcp#readme"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = [
    "mcp",
    "pytest",
    "pytest-asyncio",
    "black",
    "ruff",
]
examples = [
    "openai",
    "thefuzz",
]
